# BreakoutDetection

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md
Python/: breakout_detection.i  breakout_detection.py  breakout_detection_wrap.cxx  setup.py  test.py
R/: EDM.R  RcppExports.R
data/: Scribe.RData
man/: BreakoutDetection-package.Rd  Scribe.RData.Rd  breakout.Rd
src/: CMakeLists.txt  EdmMulti.h  EdmPer.h  EdmTail.h  Edmx.h  RcppExports.cpp  RcppWrappers.cpp  edm-multi.cpp  edm-per.cpp  edmTail.cpp  edmx.cpp  helper.cpp  helper.h
test/: CMakeLists.txt  main.cpp
